--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Aman Pandey",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3"
   }
 }
